--- a/package.json
+++ b/package.json
@@ -6,9 +6,24 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.1",
+    "moment": "^2.29.3",
+    "multiselect-react-dropdown": "^2.0.21",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.1",
+    "react-data-table-component": "^7.4.7",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.29.0",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-uuid": "^1.0.2",
+    "router": "^1.3.6",
+    "sass": "^1.49.9",
+    "styled-components": "^5.3.5",
+    "sweetalert2": "^11.4.8",
+    "sweetalert2-react-content": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
